--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="twitter:creator" content="@UltraSound_US" />
     <meta property="og:title" content="太鼓の達人 The Drum Master! (Xbox) 進捗" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ultrasoundus.github.io/progressTDM/" />
-    <meta property="og:image" content="https://ultrasoundus.github.io/progressTDM/preview.png" />
+    <meta property="og:url" content="https://ultrasoundus.github.io/progressXbox1/" />
+    <meta property="og:image" content="https://ultrasoundus.github.io/progressXbox1/preview.png" />
     <meta property="og:description" content="太鼓の達人 The Drum Master (Xbox) の進捗状況です" />
 
     <link rel="stylesheet" href="style.css" />
